--- a/docker/Dockerfile.mekalacar
+++ b/docker/Dockerfile.mekalacar
@@ -251,6 +251,10 @@ RUN apt-get update && \
     	ros-${ROS_DISTRO}-rtabmap-ros \
 	&& apt-get clean
 
+RUN apt-get update && \
+	apt-get install -y --no-install-recommends \
+		ros-${ROS_DISTRO}-joint-state-publisher-gui \
+	&& apt-get clean
 
 # 
 # setup entrypoint
