add state publisher

--- a/ros_ws/src/description/CMakeLists.txt
+++ b/ros_ws/src/description/CMakeLists.txt
@@ -2,11 +2,21 @@ cmake_minimum_required(VERSION 2.8.3)
 
 project(description)
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  rospy
+  sensor_msgs
+  arduino
+)
 
 catkin_package()
 
 find_package(roslaunch)
+
+catkin_install_python(PROGRAMS
+  scripts/joint_state_publisher.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 foreach(dir config launch meshes urdf)
 	install(DIRECTORY ${dir}/
